# TOB3_reader

./: .dockerignore  Dockerfile  README.md  pyproject.toml  rename-package.sh
.github/workflows/: pipeline.yml
docs/: Makefile  conf.py
docs/sources/: modules.rst  mypackage.rst
src/mypackage/: __main__.py
src/tob3reader/: __init__.py  __main__.py  module.py
tests/: test_module.py  tob1data  tob1data~  tob3data
