[build-system]
requires = ["setuptools >= 61.0", "autosemver"]

[project]
requires-python = ">=3.12"
dependencies = [
    "autosemver",
    # autosemver uses some deprecated setuptools APIs
    # https://github.com/david-caro/python-autosemver/issues/56
    "setuptools < 81",
]
name = "mypackage"
dynamic = ["version"]
authors = [{ name = "John Doe", email = "johdoe@ceh.ac.uk" }]
description = "A minimal setup for a template package."

[dependency-groups]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme"]
lint = ["ruff"]
dev = [
  { include-group = "test"},
  { include-group = "docs"},
  { include-group = "lint"},
]

[tool.setuptools.dynamic]
version = { attr = "mypackage.__version__" }

[tool.pytest.ini_options]
addopts = "--cov=mypackage"
markers = [
    "slow: Marks slow tests",
]

filterwarnings = [
    "ignore::DeprecationWarning:autosemver.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.coverage.run]
omit = ["*__init__.py", "src/mypackage/__main__.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "A", "PLC", "PLE", "PLW", "I", "N816", "ANN001", "ANN201", "ANN202", "ANN205", "ANN206"]

[tool.ruff.lint.flake8-type-checking]
strict = true
